# DSL-RobotChat

./: README.md  package-lock.json
backend/: README.md  bot_rules.dsl  dsl_grammar.lark  dsl_interpreter.py  main.py  pyproject.toml  rules.dsl
backend/tests/: test_dsl_interpreter.py  test_init_chat.py  test_init_httpx.py  test_lark.py  test_turn_chat.py  test_turn_httpx.py  test_variable_chat.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/: App.js  App.test.js
