[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.6.2.post1",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "lark>=1.2.2",
    "pydantic>=2.9.2",
    "pytest-asyncio>=0.24.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "pytest>=8.3.3",
    "twisted>=24.10.0",
    "uvicorn>=0.32.0",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
